--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,18 @@
   </div>
   <div>
     <h1 class="text-center">FireChat</h1>
-    <hr>
-    <div class="chat-window">
+    <hr />
+    <div class="col-md-12 text-right" *ngIf="chatService.user.uid">
+      <button
+        type="button"
+        class="btn btn-outline-danger"
+        (click)="chatService.logout()"
+      >
+        Salir
+      </button>
+    </div>
+    <app-login *ngIf="!chatService.user.uid"></app-login>
+    <div class="chat-window" *ngIf="chatService.user.uid">
       <app-chat></app-chat>
     </div>
   </div>
