--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,14 +1,28 @@
 <h1>BiblioChat</h1>
 <hr />
 <div class="app-mensajes" id="app-mensajes">
-  <div class="text-right">
+  <div
+    [ngClass]="{ 'text-right': chatService.user.uid == c.uid }"
+    *ngFor="let c of chatService.chat"
+  >
+    <span
+      class="badge"
+      [ngClass]="{
+        'badge-primary': chatService.user.uid == c.uid,
+        'badge-warning': chatService.user.uid != c.uid
+      }"
+      >{{ c.usuario }}</span
+    >
+    <p>{{ c.msg }}</p>
+  </div>
+  <!-- <div class="text-right">
     <span class="badge badge-primary">Yi</span>
     <p>mensaje de chat</p>
   </div>
   <div>
     <span class="badge badge-success">Chen</span>
     <p>mensaje de chat</p>
-  </div>
+  </div> -->
 </div>
 <input
   class="form-control"
